# FastAPI-PostgreSQL

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci-cd.yaml
app/: __init__.py  cache.py  config.py  db.py  main.py  metrics.py  schemas.py
app/routers/: documents.py  health.py
argocd/: application.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
migrations/: 001_init.sql
observability/grafana/: dashboard.json
observability/grafana/provisioning/dashboards/: provider.yml
observability/grafana/provisioning/datasources/: datasource.yml
observability/prometheus/: alerts.local.yml  alerts.yaml  prometheus.yml
tests/: conftest.py  test_documents.py
